<resources>
    <string name="bienvenida">¿No sabes por quién votar?\n ¡Pues, para de sufrir!\n ¡Esta es la app que estabas buscando!\n
        En "TuVoto"  podrás encontrar toda la información precisa y
        necesaria para tomar una mejor decisión en estas elecciones.
    </string>
    <string name="continuar">CONTINUAR</string>
    <string name="titulobienvenida">¡Bienvenido(a) a TuVoto!</string>
    <string name="app_name">TuVoto</string>
    <string name="nombreApp">TuVoto</string>
    <string name="boton1">PARTIDOS POLITICOS</string>
    <string name="boton2">PROPUESTAS POR CATEGORIA</string>
    <string name="boton3">INFO</string>
    <string name="categorias">Categorias</string>
    <string name="educacion">Educación</string>
    <string name="titulo_juntos_peru">Juntos por el Perú</string>
    <string name="titulo_somos">Somos Perú</string>
    <string name="titulo_renova">Renova Perú</string>
    <string name="titulo_partido_morado">Partido Morado</string>
    <string name="titulo_v_nacional">Victoria Nacional</string>
    <string name="titulo_accion_popular">Acción Popular</string>
    <string name="titulo_avanza_Pais">Avanza País</string>
    <string name="titulo_alianza">Alianza para el Progreso</string>
    <string name="titulo_fuerza_popular">Fuerza Popular</string>
    <string name="Ib">Partido</string>
    <string name="vista_salud">Salud</string>
    <string name="foto_candidato">candidato foto</string>
    <string name="tuv_Titulo">Tuvoto</string>
    <string name="tv_Titulo_partidos">Lista de partidos políticos</string>
    <string name="tv_titulo_alianza">
        PROPUESTA DE ALIANZA PARA EL PROGRESO
    </string>
    <string name="prop_salud_alianza">
        Mejoraremos el acceso a la atención, prevención y educación en salud mediante un Servicio voluntario
        (médicos, dentistas, enfermeras, nutricionistas, estudiantes de medicina,
        odontología, enfermería y nutrición)que permita aumentar la cobertura en salud en las zonas
        más pobres de la ciudad.
    </string>
    <string name="prop_edu_alianza">
        *Mejoraremos la calidad y el acceso a la educación en los sectores más pobres mediante un Servicio voluntario en Educación (maestros jubilados y estudiantes de educación).<br />
        *Apoyaremos la mejora de la calidad del sistema educativo mediante la creación de Centros de Información en los Municipios Distritales que contengan: biblioteca, Internet y laboratorios, para difundir el conocimiento.<br />
        *Implementar programas que incentiven a las personas menos pudientes a enviar a sus hijos a estudiar en los colegios públicos, tales como: alimentación complementaria (desayuno y almuerzo escolar).<br />
        *Realizaremos programas de salud preventiva en los colegios públicos de la capital.<br />
        *Mantenimiento de la infraestructura y mobiliario en los colegios públicos mediante convenios particulares con empresas.<br />

    </string>
    <string name="prop_eco_alianza">
        *Facilitando la integración del Municipio en la economía globalizada y en la Sociedad de la Información.<br />
        *El crecimiento sostenido de la economía peruana que tuvimos ha generado un incremento del empleo, aumentando
        la demanda en el transporte público y ésta demanda con el diseño actual del sistema de transporte público de la ciudad
        no es capaz de absorber de manera sostenible este incremento.
    </string>
    <string name="prop_deso_alianza">
        *Facilitando la integración del Municipio en la economía globalizada y en la Sociedad de la Información.<br />
        *El crecimiento sostenido de la economía peruana que tuvimos ha generado un incremento del empleo, aumentando
        la demanda en el transporte público y ésta demanda con el diseño actual del sistema de transporte público de la ciudad
        no es capaz de absorber de manera sostenible este incremento.
    </string>
    <string name="tv_titulo_avanza_pais">
        PROPUESTAS DE AVANZA PAIS
    </string>
    <string name="prop_salud_avanza">
        Promover una política de salud pública con rostro humano, que permita a los usuarios un real
        acceso a los servicios de salud, poniendo especial énfasis en la calidad de la atención a los pacientes
    </string>
    <string name="prop_edu_avanza">
        *Contribuir a la educación y participación política de la población, con el objeto de forjar una cultura cívica y democrática, que permita formar ciudadanos capacitados para asumir funciones públicas.<br />
        *Poner énfasis en una educación de calidad para formar ciudadanos educados en valores, que permitan la sostenibilidad de procesos de desarrollo y modernización nacionales.<br />

    </string>
    <string name="prop_eco_avanza">
        Nuestro Plan de Gobierno está articulado con el plan estratégico de desarrollo nacional, marco macroeconómico multianual,
        el Plan Regional de Lima Metropolitana, priorizando y respetando los Derecho Humanos,la lucha contra la pobreza y
        la búsqueda del bienestar
    </string>
    <string name="tv_titulo_fuerza_popular">
        PROPUESTAS FUERZA POPULAR:
    </string>
    <string name="prop_salud_fuerza_popular">
        Acceso a prestaciones	esenciales de salud para todos los peruanos, con énfasis en poblaciones vulnerables.
        Fortalecer las competencias sanitarias de las instancias gubernamentales.
        Garantizar el financiamiento para la atención de las enfermedades comunes, complejas y de alto costo a nivel nacional.
    </string>
    <string name="prop_edu_fuerza_popular">
        *Diseñar e implementar distintos modelos de educación inicial adaptados a la diversidad del país.
        *Promover una	cultura	de paz y reconciliación nacional a través del cumplimiento de la obligación del Estado de brindar reparaciones, erradicar la impunidad y fortalecer la educación en	Derechos Humanos en todos los niveles.
    </string>
    <string name="prop_eco_fuerza_popular">
    Promover y defender una economía social de mercado, que constituya el medio para articular
    ventajosamente a la región al
    resto del país y al mundo, a fin de lograr un desarrollo integral que permita acabar
    progresivamente con la pobreza,
    la marginación y la exclusión existentes.
    </string>
    <string name="tv_titulo_morado">
        PROPUESTAS PARTIDO MORADO:
    </string>
    <string name="prop_salud_morado">
        Revisión trimestral del cumplimiento del gasto público en salud: redes MINSA, ESSALUD y FFAA.
        Seguimiento de casos sociales relacionados con la calidad de los servicios de salud del estado en
        sus diferentes aspectos que sean presentados ante la bancada.
    </string>
    <string name="prop_edu_morado">
        *Propondremos cambiar la elección del superintendente de la SUNEDU, de tal forma que sea por concurso abierto, en vez de designación por el Ministerio de Educación.
    </string>
    <string name="prop_eco_morado">
        Propondremos acelerar la aprobación de legislación para regular las plataformas tecnológicas que realizan operaciones<br />
        financieras (tales como BITCOINS). El PL 4424/2018-PE se encuentra ya en la Comisión de Economía.
    </string>
    <string name="tv_titulo_juntos">
        PROPUESTAS JUNTOS POR EL PERU:
    </string>
    <string name="prop_salud_juntos">
        Orienta su trabajo político hacia los organismos sociales de base organizados para los asuntos
    </string>
    <string name="prop_edu_juntos">
        Contribuir a la educación y participación política de la población, con el objeto de forjar una cultura cívica y democrática, que permita formar ciudadanos capacitados para asumir funciones públicas
    </string>
    <string name="prop_eco_juntos">
       * Propondremos acelerar la aprobación de legislación para regular las plataformas tecnológicas que realizan operaciones
        financieras (tales como BITCOINS). El PL 4424/2018-PE se encuentra ya en la Comisión de Economía.
    </string>
    <string name="tv_titulo_salud_somos">
        PROPUESTAS SOMOS PERU:
    </string>
    <string name="prop_salud_somos">
        Establecer convenios de cooperación interinstitucionales entre la Municipalidad Metropolitana, Municipalidades Distritales,
        Ministerio de Salud, ESSALUD y los Operadores Privados de Salud.
        Convenios entre la Municipalidad e instituciones involucradas en salud pública y prevención de desnutrición, consumo de drogas
        y alcohol y comprometidas en su erradicación
    </string>
    <string name="prop_edu_somos">
        *Coordinación con Instituciones públicas, privadas y sociedad civil para promover la educación ambiental y la acción responsable con el medio ambiente.
        *Implementación de Cursos de Educación Técnico Productivo para estudiantes de 3°, 4° y 5° de secundaria.

    </string>
    <string name="prop_eco_somos">
        *Política de Estado del Acuerdo Nacional: Competitividad, productividad y formalización económica dentro del Eje Competitividad del país.
        *Agenda 2030: Objetivos de Desarrollo Sostenible N° 8: Trabajo decente y crecimiento económico.
    </string>
    <string name="tv_titulo_accion_popular">
        PROPUESTA DE ACCION POPULAR:
    </string>
    <string name="prop_salud_accion_popular">
        Se reducirá la anemia infantil, especialmente en las áreas rurales y amazónicas desde el 57 % actual a por lo menos un 10%
        Se combatirá como prioridad fundamental la desnutrición infantil, para continuar su reducción del actual nivel de 14.6 % a menos del 5 %.
    </string>
    <string name="prop_edu_accion_popular">
        * Establecer un solo sistema para toda la educación superior, eliminando la discriminación peyorativa de lo universitario y el resto como no Universitario.
        * Generar incentivos que combatan el abandono de la educación primaria y secundaria.
    </string>
    <string name="prop_eco_accion_popular">
        Promover una economía competitiva y diversificada; integrada por la vialidad, el transporte y la conectividad,
        articulada por los mercados para generar riqueza, mediante la inversión pública y privada, y por la aplicación de la ciencia
        y la tecnología, para la creación y multiplicación de empleo digno,
        con mayor valor agregado y una justa distribución del ingreso y la riqueza
    </string>
</resources>